Changed the colors

--- a/index.html
+++ b/index.html
@@ -15,5 +15,13 @@
         <section id="topnav1">
             <section class="text1">SmartMode</section><section class="text2">A general utility tool</section>
         </section>
+
+        <section id="mainHold">
+            <form>
+                <input id="web1" type="text" placeholder="Enter a website" autocomplete="off">
+            </form>
+        </section>
+        
+        <script src="homepage.js"></script>
     </body>
 </html>
