--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
     </head>
     <body>
         <section id="topnav1">
-            <section id="menu1">
-            </section>
+            <section id="menu1" onclick="sidenavF()"></section>
+            <section id="cross1" onclick="exitNav()"></section>
             <span class="text1">SmartMode</span>
-            <section id="mode1">
-            </section>
+            <section id="mode1"></section>
         </section>
 
         <section id="mainHold">
@@ -35,6 +34,11 @@
             <section id="btnHold">
                 <button>Block</button><button>Create New Mode</button>
             </section>
+        </section>
+
+        <section id="sidenav">
+            <section id="sidediv"></section>
+            <section id="dummydiv" onclick="exitNav()"></section>
         </section>
 
         <section id="botnav1">BottomNav</section>
