Added mode details

--- a/index.html
+++ b/index.html
@@ -31,17 +31,29 @@
                 <section id="listHold"></section>
             </section>
 
-            <section id="btnHold">
+            <section id="btnHold" class="flex">
                 <button>Block</button><button>Create New Mode</button>
             </section>
         </section>
 
-        <section id="sidenav">
+        <section id="modeDetails" class="fixedDiv">
+            <section id="detailsHold">
+                <section  id="modeName"></section>
+                <section id="closeDiv1" onclick="hideDetails()"></section>
+                <section id="webList2"></section>
+                <section id="detailsBtn" class="flex"></section>
+            </section>
+        </section>
+
+        <section id="sidenav" class="fixedDiv">
             <section id="sidediv"></section>
             <section id="dummydiv" onclick="exitNav()"></section>
         </section>
 
-        <section id="botnav1">BottomNav</section>
+        <section id="botnav1">
+            <section id="modeList"></section>
+            <section id="modeBtnHold"><button>View all</button></section>
+        </section>
         
         <script src="homepage.js"></script>
     </body>
