--- a/index.html
+++ b/index.html
@@ -28,7 +28,12 @@
             
             <section id="webList">
                 <span>List of websites added:</span><br>
-                <section id="listHold"></section>
+                <section id="listHold">
+                    example1.com<br>
+                    example2.com<br>
+                    example1.com<br>
+                    example2.com<br>
+                </section>
             </section>
 
             <section id="btnHold" class="flex">
