--- a/blocker.html
+++ b/blocker.html
@@ -315,7 +315,7 @@ input::placeholder {
     color: var(--white1);
     font-size: 16px;
     background-color: transparent;
-    border: 2px solid var(--white2);
+    border: 2px solid var(--dark2);
     margin: 0 0 0 10px;
 }
 
