--- a/encrypter.html
+++ b/encrypter.html
@@ -354,7 +354,7 @@ mode1.addEventListener("click", modeF)
 
 arrClr = ['transP1', 'white1', 'white2', 'dark1', 'dark2', 'dark3', 'dark4'];
 arrHex1 = ['ededed30', 'fff', 'e3e3e3', '0a0908', 'a7a7a7', '1f1f1f', '292929'];
-arrHex2 = ['3d3d3d30', '0a0908', '292929', 'fff', 'a7a7a7', 'e7e7e7', 'f2f2f2'];
+arrHex2 = ['3d3d3d30', '0a0908', '292929', 'fff', 'a7a7a7', 'f1f1f1', 'f2f2f2'];
 
 function modeF(){
     if (modeStat==1){
