--- a/blocker.html
+++ b/blocker.html
@@ -13,6 +13,71 @@
 
 <style>
 
+#botnav1 {
+    bottom: 0;
+    z-index: 1;
+    display: flex;
+}
+
+#modeList {
+    width: 80%;
+    margin: 0 10px 0 0;
+    overflow: auto;
+    white-space: nowrap;
+}
+
+#modeList section {
+    display: inline-block;
+    margin: 6px;
+    padding: 10px;
+    background-color: var(--dark3);
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+#modeList svg {
+    margin: 0 -2px -4px 2px;
+}
+
+#modeBtnHold button {
+    width: 100%;
+    padding: 10px;
+    margin: 7px 0;
+}
+
+#modeBtnHold {
+    width: 20%;
+}
+
+#modeDetails {
+    z-index: 4;
+    padding: 20px;
+    backdrop-filter: blur(4px);
+    background-color: var(--transP1);
+}
+
+#closeDiv1 {
+    float: right;
+    margin: -30px 0 0 0;
+    padding: 10px;
+}
+
+#detailsHold {
+    max-width: 500px;
+    margin: 20vh auto;
+    padding: 20px;
+    background-color: var(--dark1);
+    border-radius: 4px;
+}
+
+.fixedDiv {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
+}
+
 #subBtn {
     padding: 10px 30px;
     color: var(--white1);
