Temporary path fix

--- a/index.html
+++ b/index.html
@@ -142,18 +142,18 @@ function getId(id){
 
 arr1 = [
     //['blocker', 'Website blocker:',
-    ['blocker.html', 'Website blocker:',
+    ['pbl/blocker.html', 'Website blocker:',
     ['This tool is useful to block access to unwanted websites from your computer.',
     'It contains \'modes\' to customize the list of websites you want to block or unblock at a time.',
     'It stores data in browser cookies so that the modes you create will be saved even if you refresh the website.']
     ],
     //['encrypter', 'Text encrypter',
-    ['encrypter.html', 'Text encrypter',
+    ['pbl/encrypter.html', 'Text encrypter',
     ['We can input a simple text to get it\'s encrypted form and also a key to decrypt it.',
     'Without the key, the encrypted text cannot be decrypted.']
     ],
     //['STencrypter', 'Steganography',
-    ['stgraphy.html', 'Steganography',
+    ['pbl/stgraphy.html', 'Steganography',
     ['With this tool, we can store some text inside an image file.',
     'It will be protected by a password.',
     'To access the hidden text, you need to select exact file or provide it\'s path and passoword.']
